Light edits to Detailed Methods

--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -3,7 +3,7 @@
 {`JDC: Detailed Methods go after the Conclusion.`}{.red}
 
 ### 5.1 QCArchive data generation and archiving
-The MolSSI [@doi:10.1063/1.5052551] QCArchive project is a platform for computing, organizing, and sharing quantum chemistry data.
+The MolSSI QCArchive [@doi:10.1063/1.5052551] project is a platform for computing, organizing, and sharing quantum chemistry data.
 Computations with this platform automatically record all input and output quantities ensuring the reproducibility of all computations envolved.
 In the case of computing with the MolSSI QCArchive instances, all data is automatically hosted and can be queried using the platform.
 
@@ -45,59 +45,58 @@ function in the `chemi.py` module in `fragmenter` version v0.0.4). AM1 WBOs were
 bond orders were calculated for 9 kinase inhibitors and Omega generated conformers after a B3LYP-D3P(BJ) / DZVP geometry optimization. The DFT results are available on QCArchive
 as an `OptimizationDataset` named `Kinase Inhibitors: WBO Distributions`.
 
-The variance of the WBO distributions were calculated using the numpy [@doi:10.1109/MCSE.2011.37] var function version 1.16.2 and their confidence intervals were calculated using
-arch `IIDBootsrap` function [@doi:10.5281/zenodo.2613877] version 4.8.1. To calculate the correlation matrix, we calculated the
-Pearson correlation coefficient with the numpy [@doi:10.1109/MCSE.2011.37] `corrcoef` function version 1.16.2.
+The variance of the WBO distributions were calculated using the `numpy` [@doi:10.1109/MCSE.2011.37] `var` function version 1.16.2 and their confidence intervals were calculated using arch `IIDBootsrap` function [@doi:10.5281/zenodo.2613877] version 4.8.1.
+To calculate the correlation matrix, we calculated the Pearson correlation coefficient with the `numpy` [@doi:10.1109/MCSE.2011.37] `corrcoef` function version 1.16.2.
 Scripts and data used to generate and analyze this dataset are in
 [github.com/choderalab/fragmenter_data/manuscript-figures/kinase_inhibitors_wbos](https://github.com/choderalab/fragmenter_data/tree/master/manuscript-figures/kinase_inhibitors_wbos)
 
 #### 5.3.2 Subsituted phenyl dataset
-The substituted phenyl dataset consists of 3,458 substituted phenyl molecules where the substituents chosen to span a large range of electron donating and withdrawing
-groups. We arrived at 3,200 molecules by attaching 26 different functional groups to 5 scaffolds (Figure @fig:subsituted_phenyls, A) at the X~1~ position, and then
-attach the 26 functional group (and H) at the X~2~ position for a total of 133 molecules per functional group (26 * 5  + 3 (for molecules with H at the X~2~ position)).
-The AM1 ELF10 WBOs were calculated as described above. We selected molecules for QC torsion scans as follows:
-1. From the 26 functional groups, we only selected molecules from 18 functional groups, skipping X~1~s that either did not have a rotatable bond (fluorine, chlorine, Iodine,
-bromine, nitrile, oxygen), were too congested (triflouromethyl, trimethylamonium) or where the WBOs on the bonds attaching X~1~ to the phenyl ring did not change much
+The substituted phenyl dataset consists of 3,458 substituted phenyl molecules where the substituents chosen to span a large range of electron donating and withdrawing groups.
+We arrived at 3,200 molecules by attaching 26 different functional groups to 5 scaffolds (Figure @fig:subsituted_phenyls, A) at the X~1~ position, and then attach the 26 functional group (and H) at the X~2~ position for a total of 133 molecules per functional group (26 * 5  + 3 (for molecules with H at the X~2~ position)).
+The AM1 ELF10 WBOs were calculated as described above.
+
+We selected molecules for QC torsion scans as follows:
+1. From the 26 functional groups, we only selected molecules from 18 functional groups, skipping X~1~s that either did not have a rotatable bond (fluorine, chlorine, iodine, bromine, nitrile, oxygen), were too congested (triflouromethyl, trimethylamonium) or where the WBOs on the bonds attaching X~1~ to the phenyl ring did not change much
 with different chemical group at the X~2~ position (methyl).
-2. For the 18 functional groups, we chose molecules that were evenly spaced along the WBO range of that functional group, up to 15 molecules. While all the skipped
-functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have
-not yet benchmarked the level of theory to use for anions.
-3. After selection, we had 140 molecules that we submitted to QCArchive for both QC and MM torsion scan. The dataset is available on QCArchive as a `TorsionDriveDataset` named
-`OpenFF Subsituted Phenyl Set 1`. This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls.
+2. For the 18 functional groups, we chose molecules that were evenly spaced along the WBO range of that functional group, up to 15 molecules.
+While all the skipped functional groups for X~1~ were allowed to be at X~2~, we did not include the negative oxygen at X~2~ because OpenFF have not yet benchmarked the level of theory to use for anions.
+3. After selection, we had 140 molecules that we submitted to QCArchive for both QC and MM torsion scan.
+The dataset is available on QCArchive as a `TorsionDriveDataset` named `OpenFF Subsituted Phenyl Set 1`.
+This dataset also includes the biphenyl torsion scans shown in Figure @fig:biphenyls.
 
 Scripts used to generate and analyze this dataset can be found in [github.com/choderalab/fragmenter_data/phenyl_benchmark](https://github.com/choderalab/fragmenter_data/tree/master/phenyl_benchmark)
 
-There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default
-OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
+There is another subsituted phenyl set on QCArchive whose results are not shown in this paper because it was run with a different level of theory as the default OpenFF level of theory, included anions which we did not yet decide how to handle and did not have good coverage of WBO ranges.
 
 #### 5.3.3 Exhaustive fragmentation dataset
 
-The exhaustive fragmentation dataset was generated by filtering DrugBank version (version 5.1.3 downloaded
-on 2019-06-06) [@doi:10.1093/nar/gkx1037] with criteria described in section 4 and repeated here for clarity:
+The exhaustive fragmentation dataset was generated by filtering DrugBank version (version 5.1.3 downloaded on 2019-06-06) [@doi:10.1093/nar/gkx1037] with criteria described in section 4 and repeated here for clarity:
 1. FDA approved
 2. Ring sized between 3 and 14 heavy atoms
 3. Rotatable bonds between 4 and 10
 4. At least one aromatic ring
-5. Only 1 connected component
+5. Only a single connected component
 
-This left us with 730 molecules. To expand states, we used `OEGetReasonableTautomers` from QUACPAC (OpenEye version 2019.Apr.2) in the
+This left us with 730 molecules.
+To expand protonation and tautomeric states, we used `OEGetReasonableTautomers` from QUACPAC (OpenEye version 2019.Apr.2) in the
 `states.py` module in `fragmenter` (version v0.0.2+175.g6fbbf32 for this original set, but versions v0.0.3 and v0.0.4 will
-generate the same results with the same options). We set `pKaNorm` to True so that the ionization state of each tautomer
-is assigned to a predominant state at pH ~ 7.4. This generated 1289 molecules.
+generate the same results with the same options).
+We set `pKaNorm` to True so that the ionization state of each tautomer is assigned to a predominant state at pH ~ 7.4.
+This generated 1289 molecules.
 
 We then used the `CombinatorialFragmenter` from `fragmenter` version v0.0.2+179.g0e7e9e3 (versions v0.0.3 and v0.0.4 will generate
-the same fragments with the same options) to generate all possible fragments for each molecules. We set the option `functional_groups`
-to False so that all functional groups besides rings will also get fragmented so we can use the data to explore which functional groups
+the same fragments with the same options) to generate all possible fragments for each molecules.
+We set the option `functional_groups` to False so that all functional groups besides rings will also get fragmented so we can use the data to explore which functional groups
 should not be fragmented. We used the default settings for all other options ( `min_rotor` is 1 and `min_heavy_atoms` is 4 so that the smallest fragments have at least one torsion.
 `max_rotors` is the number of rotors in the parent molecules so that the largest fragment generated is one less rotor than the parent molecule).
 This generated ~300,000 fragments.
 
-We then used Omega (OpenEye version 2019.Apr.2) to generate conformers for each fragment and calculated each conformer's WBOs
-as described above. All scripts used to generate this dataset are in
+We then used Omega (OpenEye version 2019.Apr.2) to generate conformers for each fragment and calculated each conformer's WBOs as described above.
+All scripts used to generate this dataset are in
 [github.com/choderalab/fragmenter_data/combinatorial_fragmentation](https://github.com/choderalab/fragmenter_data/tree/master/combinatorial_fragmentation).
 The dataset is available as zip files on `(hold for link to where we will host the data)`{.red}.
 
-The benchmark set used to evaluate disruption thresholds and compare to other schemes were chosen as described in section 3.5.2.
+The benchmark set used to evaluate disruption thresholds and compare to other schemes were chosen as described in Section 3.5.2.
 `fragmenter` version 0.0.5 was used to generate fragments for the different schemes and disruption thresholds.
 
 ### 5.4 Fragmenting molecules
@@ -127,36 +126,43 @@ functional group SMARTS patterns that they wish to avoid fragmenting.
 | alkyne | `[CX2]#[CX2]` |
 | nitrile | `[NX1]#[CX2]` |
 
-Table: Default functional groups that the `CombinatorialFragmenter` will not fragment. This list is not comprehensive and is
+Table: **Default functional groups that the `CombinatorialFragmenter` preserves whole during fragmentation.**
+This list is not comprehensive and is
 different than the list used for the `WBOFragmenter` {#tbl:fgroups_comb}
 
 The user can also set the minimum and maximum number of rotatable bonds, and minimum heavy atoms in a fragment.
 
 #### 5.4.2 Generate minimal fragments
-The `PfizerFragmenter` implements the scheme developed at Pfizer and described in [@doi:10.1021/acs.jcim.9b00373]. It uses the same list
-of functional groups as the `WBOFragmenter` uses. The user can also provide their own SMARTS patterns of functional groups not to fragment.
+The `PfizerFragmenter` implements the scheme developed at Pfizer and described in [@doi:10.1021/acs.jcim.9b00373].
+It uses the same list
+of functional groups as the `WBOFragmenter` uses.
+The user can also provide their own SMARTS patterns of functional groups not to fragment.
 
 #### 5.4.3 Using the WBO as a surrogate for changes in chemical environment.
 The `WBOFragmenter` implements the FBO scheme described in this paper. The functional groups that are not fragmented are given in table @tbl:fgroups.
 Users can add more SMARTS patterns if needed.
 
 When the WBO on a central bond in a minimal fragment has been disrupted more than the threshold, remote atoms need to be added
-onto the fragment. However, there are multiple ways to grow out a fragment and enumerating all possible ways to find the best one
-can become too computationally expensive. Therefore, we need to use heuristics to decide where to add the next atoms.
+onto the fragment.
+However, there are multiple ways to grow out a fragment and enumerating all possible ways to find the best one can become too computationally expensive.
+Therefore, we need to use heuristics to decide where to add the next atoms.
 The two heuristics available in `fragmenter` are:
 
 1. **Shortest path length**
-Here, the bond with the shortest path to the central bond is added next. The rationale for this heuristic is that atoms closer
-to the central bond will have a greater influence to the bond's chemical environment. If more than one connected bond has the shortest path
-to the central bond, the bond with the higher WBO is added next.
+Here, the bond with the shortest path to the central bond is added next.
+The rationale for this heuristic is that atoms closer
+to the central bond will have a greater influence to the bond's chemical environment.
+If more than one connected bond has the shortest path to the central bond, the bond with the higher WBO is added next.
 
 2. **Greatest WBO**
-Here, the bonds connected to the fragment that have the greatest WBO is added next. The rationale for this heuristic is that
+Here, the bonds connected to the fragment that have the greatest WBO is added next.
+The rationale for this heuristic is that
 bonds with higher WBO are more likely to be involved in extended conjugation that can influence the central bond.
 
-Both of these heuristics will sometimes give different results `[Hold for SI figure]`{.red}. We found that for the benchmark set we tested,
+Both of these heuristics will sometimes give different results `[Hold for SI figure]`{.red}.
+We found that for the benchmark set we tested,
 the shortest path heuristic preformed better, or found more optimal fragments when compared to using the greatest WBO heuristic `[Hold for SI]`{.red}.
 
-Currently, `fragmenter` depends on OpenEye to provides three modes of fragmentation described here. In the future, `fragmenter`
-will be incorporated into the `openforcefield` toolkit and will have the option to use RDKit [@url:http://www.rdkit.org/],
-an open source cheminformatic libraries. However, given that RDKit supports EHT instead of AM1, the fragments might be different.
+Currently, `fragmenter` depends on OpenEye to provides three modes of fragmentation described here.
+In the future, `fragmenter` will be incorporated into the `openforcefield` toolkit and will have the option to use RDKit [@url:http://www.rdkit.org/], an open source cheminformatic libraries.
+ However, given that RDKit supports EHT instead of AM1 {`JDC: As of which version?`}{.red}, the fragments might be different.
